Change Log

0.3
- Removed the sashbar between zone controls and library
- Set application name to Janos
- improved tool-tip display (esp for linux users)
- Modified linux launcher to use absolute paths
- Fixed bug 2674384: "Service Event registration uses unreliable return address"

0.2
- Removed tooltip on zone list
- Added log4j logging
- Dispose correctly on close
- Added icons for zones, library entries
- Added Radio, Line In to library
- Browse requests now cancelled when table is disposed
- Added Search bar
- Added URL adder bar
- Added Tooltips to library & queue entries
- Added Drag & Drop support
- adjust MusicControlPanel to pin each column width to the ClientArea's width, eliminating "phantom" columns

0.1
Initial Release. 
Currently works for: 
  Browsing Music 
  Adding to queue (not removing) 
  Seeking in queue 
  Changing volume 
  Next/Previous 
  Displaying now playing info