@@ -6,6 +6,7 @@ Change Log
 - improved tool-tip display (esp for linux users)
 - Modified linux launcher to use absolute paths
 - Fixed bug 2674384: "Service Event registration uses unreliable return address"
+- Tooltip and Now Playing section now correctly display ampersands and non-ASCII chars
 
 0.2
 - Removed tooltip on zone list
